# starlight

./: CMakeLists.txt  CMakePresets.json  README.md
examples/: device.c  making_a_window.c
include/: core.h  device.h  framebuffer.h  starlight.h  window.h
src/: core.c  device.c  framebuffer.c  window.c
src/core/: window.c
